--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,59 @@
+# Dependencies
+node_modules/
 **/node_modules/
-.next
-.cache
-.build
+.pnp
+.pnp.js
+
+# Production builds
+.next/
+out/
+build/
+dist/
+
+# Environment variables
+.env
+.env*.local
+.env.production
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Local development
+.DS_Store
+*.tsbuildinfo
+next-env.d.ts
+
+# Vercel
+.vercel
+
+# Database
+*.db
+*.sqlite
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+Thumbs.db
+
+# Custom
+.deploy/
+.logs/
+.cache/
+.build/
+
+# Yarn
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
-!.yarn/cache
 .yarn/build-state.yml
 .yarn/install-state.gz
-dist
-target
-out
-.deploy
-.logs
-*.tsbuildinfo
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
