--- a/package.json
+++ b/package.json
@@ -1,4 +1,20 @@
-"devDependencies": {
+{
+  "name": "sensoryscribe",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "next": "14.2.4",
+    "react": "^18",
+    "react-dom": "^18"
+  },
+  "devDependencies": {
     "@typescript-eslint/parser": "^7.0.0",
     "eslint": "^8.56.0"
   }
+}
